src/Base/main/default/objects/Queueable_Exception_Log__c/Queueable_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Logs exception details</description>
    <label>Queueable Exception Log</label>
    <nameField>
        <displayFormat>QUEUE_EXLOG-{0000}</displayFormat>
        <label>Queueable Exception Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queueable Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>