src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>The cause of the Exception</description>
    <label>Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>