src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Name of the Class the Exception happened in</description>
    <inlineHelpText>Name of the Class the Exception happened in</inlineHelpText>
    <label>Class Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>