src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Initial_Input_JSON__c.field-meta.xml
<CustomField>
    <fullName>Initial_Input_JSON__c</fullName>
    <description>A Serialized representation of the original input to the Queueable</description>
    <label>Initial Input JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>