src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Initial_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Input_Type__c</fullName>
    <description>The type of the initial input to the Queueable, ex &apos;Set&lt;Id&gt;&apos;</description>
    <label>Initial Input Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>