src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The Error Message</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>