src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Mathe Name the exception occurred in</description>
    <label>Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>