src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <description>An optional field to specify a module in which the exception occured</description>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>