src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The exception Stack Trace</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>