src/Base/main/default/objects/Queueable_Exception_Log__c/fields/System_Issue__c.field-meta.xml
<CustomField>
    <fullName>System_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>System_Issue__c.Type__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </filterItems>
        <filterItems>
            <field>System_Issue__c.Jira_Project__c</field>
            <operation>equals</operation>
            <value>Salesforce Issues</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Issue__c</referenceTo>
    <relationshipLabel>Queueable Exception Logs</relationshipLabel>
    <relationshipName>Queueable_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>