src/Base/main/default/objects/Queueable_Exception_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Exception Type</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>