src/Base/main/default/objects/Queueable_Exception_Log__c/listViews/Unresolved.listView-meta.xml
<ListView>
    <fullName>Unresolved</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>Unresolved</label>
</ListView>